system - fix video height on mobile

--- a/app/css/_projects.scss
+++ b/app/css/_projects.scss
@@ -245,6 +245,10 @@
       }
     }
   }
+
+  iframe {
+    height: 100vh;
+  }
 }
 
 @media (max-width: 768px) {
